# checkedc

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.TXT  MAILING-LISTS.md  README.md  WishList.md
include/: CMakeLists.txt  _builtin_common.h  _builtin_stdio_checked.h  _builtin_string_checked.h  assert.h  assert_checked.h  checkedc_extensions.h  crypt.h  crypt_checked.h  dirent.h  dirent_checked.h  errno.h  errno_checked.h  fcntl.h  fcntl_checked.h  fenv.h  fenv_checked.h  grp.h  grp_checked.h  inttypes.h  inttypes_checked.h  inttypes_checked_internal.h  math.h  math_checked.h  netdb.h  netdb_checked.h  poll.h  poll_checked.h  pwd.h  pwd_checked.h  shadow.h  shadow_checked.h  signal.h  signal_checked.h  socket_checked.h  stdchecked.h  stdio.h  stdio_checked.h  stdlib.h  stdlib_checked.h  (+12 more)
include/arpa/: inet.h  inet_checked.h
include/sys/: mman.h  mman_checked.h  resource.h  resource_checked.h  select.h  select_checked.h  socket.h  socket_checked.h  stat.h  stat_checked.h  time.h  time_checked.h  wait.h  wait_checked.h
papers/dynamic_checks/: .gitignore  Makefile  README.md  abstract.tex  c_syntax.tex  checked_c.sty  checkedc.bib  checks.tex  conclusion.tex  evaluation.tex  example.tex  hyperendnotes.sty  introduction.tex  listing-label.sty  overview.tex  propagation.tex  propagation_rules.tex  related_work.tex  tr02.tex
papers/presentations/: checkedc-presentation.pptx
presentations/: Checked-C-UW-PLSE-Workshop-Final.pptx
samples/: 2_3_1_add.c  2_7_checked.c  2_8_append.c  3_11_compare.c  3_11_sum.c  3_2_1_add.c  3_2_1_find.c  3_2_1_sum.c  3_2_1_sum_extern.c  3_2_2_find.c  3_4_array_ptr.c  3_4_ptr.c  README.md  avoid-warning.c  echo-args-buggy.c  echo-args.c  exit-on-failure.c  find-pattern.c  hello-world.c  string-helpers.c
samples/CVE/: LICENSE.txt  README.txt
samples/spec/: 2_3_1_add.c  2_8_append.c  3_11_compare.c  3_11_sum.c  3_2_1_add.c  3_2_1_find.c  3_2_1_sum_extern.c  3_4_array_ptr.c  3_4_ptr.c
spec/: .gitignore
spec/bounds_safety/: README.md  abstract.tex  aliased-members.tex  aliased-structures.tex  array-view-compilation.tex  bounds-declarations.tex  changelog.tex  checkedc.tex  checking-bounds.tex  checking-structure-bounds.tex  checking-variable-bounds.tex  core-extensions.tex  design-alternatives.tex  fragments.tex  interoperation.tex  introduction.tex  lessons.tex  makefile  open-issues.tex  pointers-to-pointers.tex  principles.tex  related-work.tex  roadmap.tex  simple-invariants.tex  sources.bib  span-compilation.tex  structure-bounds.tex  tracking-bounds.tex  variable-bounds.tex  void-ptr-replacements.tex
tests/: bounds_declaration_parsing.c  checked_array_type_parsing.c  checked_array_typechecking.c  parsing_bounds_parameters.c  parsing_bounds_var_declarations.c  pointer_type_parsing.c  pointer_type_typechecking.c  ptrtype_parsing.c  ptrtype_typechecking.c
tests/checked_headers/: redeclare_libs_explicit.c  redeclare_libs_explicit_linux.c  redeclare_libs_implicit.c  redeclare_libs_implicit_linux.c  redeclare_libs_mixed.c  redeclare_libs_mixed_linux.c
tests/dynamic_checking/: README.md  compound-assign-deref-arith-check-opt.c  compound-assign-deref-check-opt.c  compound-assign-deref-check.c  compound-assign-subscript-check-opt.c  compound-assign-subscript-check.c  deref-arith-check-opt.c  deref-arith-check.c  deref-check-opt.c  deref-check.c  dynamic-bounds-cast-check.c  dynamic_check-arith-fail.c  dynamic_check-arith-pass.c  dynamic_check-simple-pass.c  failing-arith-dynamic_check.c  failing-simple-dynamic_check.c  increment-deref-arith-check-opt.c  increment-deref-arith-check.c  increment-deref-check-opt.c  increment-deref-check.c  increment-subscript-check-opt.c  increment-subscript-check.c  passing-arith-dynamic_check.c  passing-simple-dynamic_check.c  read-deref-arith-check-opt.c  read-deref-check-opt.c  read-deref-check.c  read-member-arrow-pointer-check.c  read-member-dot-array-check.c  read-member-dot-pointer-check.c  read-member-pointer-check.c  read-subscript-check-opt.c  read-subscript-check.c  subscript-check-opt.c  subscript-check.c  subscript-member-expr-check.c  successful-arith-dynamic_check.c  successful-simple-dynamic_check.c  update-deref-arith-check-opt.c  update-deref-arith-check.c  (+13 more)
tests/exist_types_runtest/: callbacks.c  counters.c
tests/generic-type/: generic_func_insta_error.c
tests/parsing/: checked_array_types.c  declaration_bounds.c  interop_and_bounds.c  interop_types.c  member_bounds.c  member_bounds_rel_align.c  parameter_bounds.c  parameter_bounds_rel_align.c  pointer_bounds_cast.c  pointer_types.c  rel_align.c  return_bounds.c  return_bounds_rel_align.c
tests/runtime_operations/: README.md  assignments.c
tests/safe-memory-management/: dereference.c  safe_mm_checked.h
tests/static_checking/: address_of.c  bounds_decl_checking.c  bundled_statements.c  initializers.c  lexical_equality.c  nme_bounds.c  nt_initializers.c  static_check_bounds_cast.c
tests/typechecking/: bounds.c  bounds_cast.c  checked_arrays.c  checked_scope.c  checked_scope_basic.c  checked_scope_bounds_only.c  checked_scope_interfaces.c  checked_scope_pragma.c  checked_scope_pragma_bounds_only.c  errno-use.c  existential_structs.c  free-variables.c  function_casts.c  generic_functions.c  generic_structs.c  generic_type_arguments.c  generic_void_casts.c  interop.c  interop_type_annotations.c  itype_generic_functions.c  itype_generic_structs.c  malloc_free.c  pointer_types.c  (+10 more)
(+119 files in other folders)
